|#000|+balvinder| updating endpoints in REST API/ATOM feed documents

--- a/1.1-Facility API.md
+++ b/1.1-Facility API.md
@@ -1,18 +1,15 @@
 # Facility program API
 
-### Communication Type
+#### Communication Type
 
-- GET, to OpenLMIS
+- HTTP GET on [/rest-api/facilties/**\<facilityCode\>**](#)
+(wherein facilityCode is the code for the facility to be fetched)
 
-### Authentication
+#### Authentication
+- [HTTP Basic Authentication](http://www.httpwatch.com/httpgallery/authentication/) (Base64 encoded string containing username:password)
 
-- Authentication token (Base64 encrypted string containing username:password)
 
-### Parameter
-
-- facilityCode
-
-### Return
+#### Return
 
 - code
 - name
@@ -50,27 +47,20 @@
     programCode2  
     etc.  }   
 
-### Note :   
+#### Note :
 
 If the value of field is null is OpenLMIS, that field tag will not be included in the response. It is the standard that will be maintained in all the API responses.
 
-### Error scenarios
+#### Error scenarios
 
-#### 1) *Invalid authentication*  
+##### 1) *Invalid authentication*
 **Response**:    
 {  
    "error": "Authentication Failed"  
 }   
 **Description**: This error can be caused by an incorrect API username or an incorrect API password.
 
-#### 2) *Missing facilityCode*
-**Response**:  
-{    
-   "error": "Bad request"    
-}    
-**Description**: This error will occur if facilityCode is missing in the request URl
-
-#### 3) *Invalid facilityCode*
+##### 3) *Invalid facilityCode*
 **Response**:  
 {        
    "error": "Invalid facilityCode"      
@@ -78,14 +68,14 @@ If the value of field is null is OpenLMIS, that field tag will not be included i
   
 **Description**: This error will occur if facilityCode does not exist in OpenLMIS
 
-#### 4) *Internal server error*
+##### 4) *Internal server error*
 **Response**:  
 {        
    "error": "Something went wrong"      
 }  
 **Description**: This error will occur if request can not be processed due to some internal server error.
 
-### Notes
+#### Notes
 
 CommTrack will use this API to querry facility details for a facility along with its active supported programs. 
 
