--- a/3.2-ProgramProduct API.md
+++ b/3.2-ProgramProduct API.md
@@ -1,18 +1,21 @@
 # Program Product API
 
-### Communication Type
+#### Communication Type
 
-- GET, to OpenLMIS
+- HTTP GET on [/rest-api/program-products](#)
 
-### Authentication
 
-- Authentication token (Base64 encrypted string containing username:password)
+#### Authentication
+- [HTTP Basic Authentication](http://www.httpwatch.com/httpgallery/authentication/) (Base64 encoded string containing username:password)
 
 ### Parameter
 
 - programCode
+- facilityTypeCode (optional)
 
-### Return
+(wherein programCode is the code for the program whose products are to be fetched and facilityTypeCode is to filter the facility on facilityType)
+
+#### Return
 
 - programCode
 - programName 
@@ -22,23 +25,23 @@
 - unit
 - category
 
-### Error scenarios
+#### Error scenarios
 
-#### 1) *Invalid authentication*  
+##### 1) *Invalid authentication*  
 **Response**:    
 {  
    "error": "Authentication Failed"  
 }   
 **Description**: This error can be caused by an incorrect API username or an incorrect API password.
 
-#### 2) *Missing programCode*
+##### 2) *Missing programCode*
 **Response**:  
 {    
    "error": "Bad request"    
 }    
 **Description**: This error will occur if programCode is missing in the request URl
 
-#### 3) *Invalid programCode*
+##### 3) *Invalid programCode*
 **Response**:  
 {        
    "error": "Invalid programCode"      
@@ -46,18 +49,18 @@
   
 **Description**: This error will occur if programCode does not exist in OpenLMIS
 
-#### 4) *Internal server error*
+##### 4) *Internal server error*
 **Response**:  
 {        
    "error": "Something went wrong"      
 }  
 **Description**: This error will occur if request can not be processed due to some internal server error.
 
-### Notes
+#### Notes
 
 CommTrack will use this program-product data for supporting the replenishment process with Clinicians / CHWs, and submitting Reports to OpenLMIS. All active products approved for a program will be avaliable to the CHW through OpenLMIS. CHWs inherit the facility type of their "home" or "base" facility, and the products made available to CHWs through their base facility can be further constrained within CommTrack. This approach can be revised once CommTrack introduces the notion of facility type.
 
-### JSON
+#### JSON
 
 ```xml
 {"programProductList":[{"programCode":"HIV",  
