--- a/4.1-CreateVirtualFacility API.md
+++ b/4.1-CreateVirtualFacility API.md
@@ -1,14 +1,14 @@
 # Create virtual facility API
 
-### Communication Type
+#### Communication Type
 
-- HTTP Post, to OpenLMIS
- 
-### Authentication
+- HTTP POST on [/rest-api/agents](#)
 
-- Authentication token (Base64 encrypted string containing username:password)
 
-### Parameters
+#### Authentication
+- [HTTP Basic Authentication](http://www.httpwatch.com/httpgallery/authentication/) (Base64 encoded string containing username:password)
+
+#### Parameters
 
 - agentCode - Mandatory
 - agentName - Mandatory
@@ -16,30 +16,30 @@
 - phoneNumber - Optional
 - Active - {True | False} - Optional (By default will be considered as "active")
 
-### Return
+#### Return
 
-#### Success
+##### Success
 {  
    "Success": "Success message"  
 } 
 
-### Error scenarios
+##### Error scenarios
 
-#### 1) *Invalid authentication*  
+###### 1) *Invalid authentication*  
 **Response**:    
 {  
    "error": "Authentication Failed"  
 }   
 **Description**: This error can be caused by an incorrect API username or an incorrect API password. 
 
-#### 2) *Any mandatory field missing*
+###### 2) *Any mandatory field missing*
 **Response**:  
 {    
    "error": "Missing mandatory fields"    
 }    
 **Description**: This error will occur if any of the manadatory field (agentCode, agentName or baseFacilityCode) tag is missing, blank tag will be considered as invalid value (not missing value).
 
-#### 3) *Invalid parentFacilityCode*
+###### 3) *Invalid parentFacilityCode*
 **Response**:  
 {        
    "error": "Invalid Facility code"      
@@ -47,7 +47,7 @@
   
 **Description**: parentfacilityCode is the Code of facility registered in OpenLMIS and sent to CommTrack as part of "facilityMasterFeed". This error will occur if parentfacilityCode in the API does not exist in OpenLMIS.  
 
-#### 4) *parentFacility is a virtual facility*
+###### 4) *parentFacility is a virtual facility*
 **Response**:  
 {        
    "error": "Parent facility can not be virtual facility"      
@@ -55,46 +55,46 @@
   
 **Description**:This error will occur if parentfacilityCode in the API is a virtual facility registered earlier in OpenLMIS. As a CHW (virtual facility) cannot be mapped to another CHW, OpenLMIS will check that parentFacilityCode should not be a virtual facility.
 
-#### 5) *agentCode already exists*
+###### 5) *agentCode already exists*
 **Response**:  
 {        
    "error": "Agent already registered"      
 }   
 **Description**: This error will occur if "createVirtualFacility" request is received with a agentCode that is already registered in OpenLMIS. An agent can be updated by "updatevirtualFacility" API.
 
-#### 6) *Invalid value for "Active" field*
+###### 6) *Invalid value for "Active" field*
 **Response**:  
 {        
    "error": "Active should be True/False"      
 }   
 **Description**: The "Active" flag in API will accept only two values : {True | False}, being an optional field in API it can be kept null. However, OpenLMIS will check for valid values if it is not null.
 
-#### 7) *Malformed JSON*
+###### 7) *Malformed JSON*
 **Response**:   
 {          
    "error": "Bad request"        
 }   
 **Description**: This error will occur if there is some formatting error in JSON.
 
-#### 8) *Unrecognized field*
+###### 8) *Unrecognized field*
 **Response**:  
 {        
    "error": "Bad request"      
 }  
 **Description**: This error will occur if any unrecognized field (apart from fields mentioned in parameters) is sent as part of API.
 
-#### 9) *Internal server error*
+###### 9) *Internal server error*
 **Response**:  
 {        
    "error": "Something went wrong"      
 }  
 **Description**: This error will occur if request can not be processed due to some internal server error.
 
-### Notes
+#### Notes
 
 CommTrack will use this API to notify OpenLMIS everytime a new CHW is created. OpenLMIS will store agentCode as an identifier for this CHW/virtual facility and use it to match up successive reports coming from CHW.
 
-### JSON
+#### JSON
 
 {"agentCode":"A2",  
 "agentName":"AgentVinod",  
