--- a/3.1-ProgramCatalogChanges.md
+++ b/3.1-ProgramCatalogChanges.md
@@ -1,19 +1,21 @@
 # Program catalog changes
 
-### Communication Type
+#### Communication Type
 
-- HTTP GET, Atom feed, published by OpenLMIS
+- HTTP GET on
+	- [/feeds/program-catalog-changes/recent](#)
+	- [/feeds/program-catalog-changes/**\<pageNumber\>**](#)
 
-### Feed Content
+#### Feed Content
 
 - programCode
 - program name 
 
-### Notes
+#### Notes
 
 CommTrack will use this feed to determine what program has been updated. OpenLMIS will publish this feed as soon as a new active product is added to a program or status of a product changes.
 
-### Sample feed
+#### Sample feed
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
