Updating "mandatory" behavior of Active flag in the API

--- a/4.1-CreateVirtualFacility API.md
+++ b/4.1-CreateVirtualFacility API.md
@@ -14,7 +14,7 @@
 - agentName - Mandatory
 - parentFacilityCode - Mandatory
 - phoneNumber - Optional
-- Active - {True | False} - Optional (By default will be considered as "active")
+- Active - {True | False} - Mandatory
 
 #### Return
 
