Updating error scenario for missing status data

--- a/4.1-CreateVirtualFacility API.md
+++ b/4.1-CreateVirtualFacility API.md
@@ -37,7 +37,7 @@
 {    
    "error": "Missing mandatory fields"    
 }    
-**Description**: This error will occur if any of the manadatory field (agentCode, agentName or baseFacilityCode) tag is missing, blank tag will be considered as invalid value (not missing value).
+**Description**: This error will occur if any of the manadatory field (agentCode, agentName, baseFacilityCode or Active) tag is missing, blank tag will be considered as invalid value (not missing value).
 
 ###### 3) *Invalid parentFacilityCode*
 **Response**:  
